# py-vue

./: .gitignore  README.md  config.ini  config.py  constants.py  main.py  pyproject.toml  requirements.txt
classes/: Clipboard.py  FilesHandle.py  Layout.py
layouts/: layout.api.ts  layout.hook.ts  layout.interface.ts  layout.scss  layout.store.ts  layout.type.ts  layout.vue
modules/: Notification.py  apiFunc.py  chooseDir.py  chooseOrCreateDirectory.py  componentFunc.py  composableFunc.py  hookFunc.py  iconFunc.py  interfaceFunc.py  scssFunc.py  storeFunc.py  typeFunc.py  viewFunc.py
utils/: appendToFile.py  camelToKebabCase.py  checkConfigTxt.py  chooseNuxtOrVue.py  createDir.py  createFile.py  createMyScssFile.py  detectModuleSystem.py  getConfigData.py  getFromClipboard.py  getLayoutPath.py  getModulePath.py  getSelectedTemplate.py  showDirectories.py
